Quick fix for non-visible datefield buttons in IE8 (#17915)
This concerns Grid Editor with themes other than Valo.
Also fixes the same issue for ComboBox.

--- a/WebContent/VAADIN/themes/base/grid/grid.scss
+++ b/WebContent/VAADIN/themes/base/grid/grid.scss
@@ -366,6 +366,18 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
         min-height: 100%;
         max-height: 100%;
       }
+      
+      .v-datefield-button {
+        .v-ie8 & {
+          margin-left: -30px;
+        }
+      }
+      
+      .v-filterselect-button {
+        .v-ie8 & {
+          margin-left: -27px;
+        }
+      }
 
       .v-select,
       .v-select-select {
